tests/fixtures/invalid/pow_float_bool_str.py
# Cannot call pow() with Float, Bool, Str
x = pow(1.0, True, "hello")
